third_party/rust/linkme/v0_3/crate/tests/ui/mutable.stderr
error: static mut is not supported by distributed_slice
 --> tests/ui/mutable.rs:6:12
  |
6 | pub static mut SLICE: [i32] = [..];
  |            ^^^

error: static mut is not supported by distributed_slice
 --> tests/ui/mutable.rs:9:8
  |
9 | static mut ELEMENT: i32 = -1;
  |        ^^^
